--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Welcome to the username page</title>
+    <title>Welcome to the jccorp page</title>
   </head>
  
   <body>
